--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.mvvm.auth.AuthViewModel" />
+            type="com.example.mvvm.ui.auth.AuthViewModel" />
 
     </data>
 
